# ml-engineering

./: README.md
Deployment/: predict.ipynb  predict_test.ipynb  train.ipynb  train.py
Deployment/homework_05/: Dockerfile  answers.md  app  app.py  fastapi_app  main.py  predict.py  pyproject.toml  test_api  test_docker
Evaluation/: homework_04.ipynb
Trees/: creditscoring.ipynb  homework_06.ipynb
deep_learning/: deep_learn.ipynb
deep_learning/clothing-dataset-small/: Untitled.ipynb
intro-01/: test.ipynb
regression-02/: Homework-02.ipynb  Homework_03.ipynb  car_price_project.ipynb  copy_homework.ipynb  import pandas as pandas.py
