[project]
name = "homework-05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn==1.6.1",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pandas",
    "requests"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"